deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: websay-dev
  name: websay-dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: websay-dev
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: websay-dev
    spec:
      containers:
      - image: bryanl/websay
        name: websay
        resources: {}
status: {}
