service.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: websay-dev
  name: websay-dev
spec:
  ports:
  - name: 80-1323
    port: 80
    protocol: TCP
    targetPort: 1323
  selector:
    app: websay-dev
  type: ClusterIP
status:
  loadBalancer: {}
